--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
   "bugs": {
     "url": "https://github.com/paveq/daikin-adjuster/issues"
   },
-  "homepage": "https://github.com/paveq/daikin-adjuster#readme"
+  "homepage": "https://github.com/paveq/daikin-adjuster#readme",
+  "dependencies": {
+    "daikin-controller-cloud": "^0.2.1"
+  }
 }
